# hotel_booking

./: .gitignore  README.md  alembic.ini  poetry.toml  pyproject.toml  pytest.ini
app/: conftest.py  main.py
app/admin_panel/: auth.py  views.py
app/bookings/: models.py  router.py  schemas.py  services.py  tasks.py
app/core/: base.py  email_templates.py  exceptions.py  services.py
app/hotels/: models.py  router.py  schemas.py  services.py
app/images/: router.py  tasks.py
app/migrations/: base.py  env.py
app/migrations/versions/: 2023_08_28_1434-f9a263cf23a7_initial_migration.py  2023_08_28_1848-e2ae7a9369b6_add_new_models.py
app/pages/: router.py
app/rooms/: models.py  router.py  services.py
app/settings/: celery_app.py  config.py  database.py  logging_config.yaml  redis_connect.py  redis_setup.py  sentry_setup.py
app/templates/: hotels.html
app/tests/: conftest.py
app/tests/bookings/integration/: parametrize_data.py  test_routers.py  test_services.py
app/tests/bookings/integration/parametrize_data/: routers.py  services.py
app/tests/mock_data/: mock_rooms.json
app/tests/users/integration/: parametrize_data.py  test_routers.py
app/tests/users/unit/: parametrize_data.py  test_services.py
app/tests/users/unit/parametrize_data/: services.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py  services.py
env/: .env.example
linters/: .style.yapf  .yapfignore  bandit.toml  bandit.yaml  black.toml  pyright.toml  pyrightconfig.json  ruff.toml
