[tool.poetry]
name = "hotel-booking"
version = "0.1.0"
description = ""
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.102.0"}
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
alembic = "^1.11.3"
greenlet = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
