[tool.poetry]
name = "hotel-booking"
version = "0.1.0"
description = ""
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
fastapi = {extras = ["all"], version = "^0.102.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

sqlalchemy = "^2.0.20"
sqladmin = "^0.15.0"
asyncpg = "^0.28.0"
alembic = "^1.11.3"
greenlet = "^2.0.2"

celery = "^5.3.4"
flower = "^2.0.1"
python-json-logger = "^2.0.7"
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-xdist = "^3.3.1"
httpx = "^0.25.0"

black = "^23.9.1"
ruff = "^0.0.291"
isort = "^5.12.0"
bandit = "^1.7.5"
pyright = "^1.1.327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend = "linters/black.toml"
extend-exclude  = '''
    ^/(
        app/migrations
    )
'''

[tool.ruff]
extend = "linters/ruff.toml"

[tool.isort]
profile = "black"
extend_skip = ["app/migrations"]

[tool.pyright]
extend = "linters/pyright.toml"

[tool.bandit]
extend = "linters/bandit.toml"